--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hexo-generator-index",
-  "version": "2.0.0",
-  "description": "Index generator for Hexo.",
+  "name": "hexo-generator-index-custom",
+  "version": "1.0.0",
+  "description": " Custom Index generator for Hexo.",
   "main": "index",
   "scripts": {
     "eslint": "eslint .",
@@ -18,7 +18,7 @@
   "engines": {
     "node": ">=12.9.0"
   },
-  "repository": "hexojs/hexo-generator-index",
+  "repository": "im0o/hexo-generator-index-custom",
   "homepage": "http://hexo.io/",
   "keywords": [
     "hexo",
@@ -26,7 +26,7 @@
     "index",
     "home"
   ],
-  "author": "Tommy Chen <tommy351@gmail.com> (http://zespia.tw)",
+  "author": "Jz0ojiang <hi@im0o.top> (https://im0o.top)",
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.2.0",
